# pangpuriye

./: .gitignore  README.md
python/pangpuriye/: README.md  example.ipynb  pyproject.toml
python/pangpuriye/example/: ocr-on-windows.ipynb  ocr.ipynb
python/pangpuriye/pangpuriye/: README.md
python/pangpuriye/pangpuriye/ai/: ocr.py
python/pangpuriye/pangpuriye/example/: ocr-on-colab.ipynb  ocr.ipynb
